--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -3,3 +3,43 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.dashboard {
+    display: grid;
+    grid-template-columns: 20% 80%;
+    grid-template-rows: 20% 80%;
+    height: 100vh;
+}
+
+.sidebar {
+    background-color: #1892d3;
+    grid-row: span 2;
+}
+
+.header {
+    grid-column: 2 / auto-fit;
+    background-color: white;
+    box-shadow: 0px 2px 2px lightgray;
+    z-index: 1;
+}
+
+.content {
+    background-color: #e1e8f0;
+    display: grid;
+    grid-template-columns: 4fr minmax(350px, 1fr);
+    grid-template-rows: 1fr 1fr;
+}
+
+.projects {
+    grid-row: 1 / auto-fit;
+    background-color: yellowgreen;
+}
+
+.announcements {
+    background-color: red;
+}
+
+.trending {
+    background-color: blue;
+}
+
