--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -40,6 +40,10 @@
     background-color: white;
     box-shadow: 0px 2px 2px lightgray;
     z-index: 1;
+    display: grid;
+    grid-template-columns: 1fr 450px;
+    grid-template-rows: 1fr 1fr;
+    gap: 16px;
 }
 
 .content {
@@ -108,4 +112,31 @@
     margin-left: 8px;
 }
 
+/* Search bar */
 
+.searchContainer {
+    display: flex;
+    align-items: center;
+    margin-left: 24px;
+}
+
+.searchContainer > .icon {
+    width: 32px;
+    height: 24px;
+}
+
+.searchContainer > .search {
+    height: 32px;
+    border: 1px solid #e1e8f0;
+    border-radius: 16px;
+    background-color: #e1e8f0;
+    width: 80%;
+    padding-left: 16px;
+    margin-left: 16px;
+    color: rgb(67, 67, 67);
+}
+
+.searchContainer > .search:focus {
+    outline: none;
+    border: 1px solid skyblue;
+}
