--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -41,7 +41,7 @@
     box-shadow: 0px 2px 2px lightgray;
     z-index: 1;
     display: grid;
-    grid-template-columns: 1fr 450px;
+    grid-template-columns: 1fr 300px;
     grid-template-rows: 1fr 1fr;
     gap: 16px;
 }
@@ -139,4 +139,32 @@
 .searchContainer > .search:focus {
     outline: none;
     border: 1px solid skyblue;
+}
+
+/* Notifcations, profile picture, and name */
+.nameContainer {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-right: 24px;
+}
+
+.nameContainer > .icon {
+    width: 24px;
+    cursor: pointer;
+}
+
+.nameContainer > .icon:hover {
+    opacity: 0.5;
+}
+
+.nameContainer > .profilePicture {
+    max-width: 48px;
+    height: 48px;
+    border-radius: 48px;
+}
+
+.nameContainer > .name {
+    font-size: 20px;
+    font-weight: bold;
 }
