--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -41,7 +41,7 @@
     box-shadow: 0px 2px 2px lightgray;
     z-index: 1;
     display: grid;
-    grid-template-columns: 1fr 300px;
+    grid-template-columns: 1fr 400px;
     grid-template-rows: 1fr 1fr;
     gap: 16px;
 }
@@ -177,6 +177,7 @@
     margin-bottom: 16px;
     align-items: center;
 }
+
 /* Greeting section */
 .greetingContainer > .profilePicture {
     width: 80px;
@@ -194,4 +195,27 @@
 .greetingContainer > .nameTag {
     margin-bottom: auto;
     font-size: 24px;
+}
+
+.header > .buttonContainer {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-right: 24px;
+}
+
+/* Header button section */
+.header button {
+    width: 100px;
+    height: 36px;
+    border-radius: 36px;
+    outline: none;
+    border: none;
+    background-color: #1b91ce;
+    color: white;
+}
+
+.header button:hover {
+    cursor: pointer;
+    background-color: #1fa6ea;
 }
