--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -239,7 +239,7 @@
     margin-top: 12px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    gap: 16px;
+    gap: 32px;
 }
 
 .projects .card {
@@ -258,4 +258,22 @@
 
 .projects .card .description {
     margin-top: 16px;
+}
+
+.projects .card .icons {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-left: auto;
+    margin-top: 4px;
+    width: 150px;
+}
+
+.projects .card .icons > .icon {
+    width: 32px;
+    cursor: pointer;
+}
+
+.projects .card .icons > .icon:hover {
+    opacity: 0.5;
 }
