--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -58,7 +58,7 @@
     background-color: yellowgreen;
 }
 
-.announcements {
+.announcementsContainer {
     background-color: red;
 }
 
@@ -276,4 +276,33 @@
 
 .projects .card .icons > .icon:hover {
     opacity: 0.5;
+}
+
+/* Announcements */
+.announcementsContainer {
+    display: flex;
+    flex-direction: column;
+    padding: 24px;
+    background-color: #e1e8f0;
+}
+
+.announcementsContainer > .title {
+    font-size: 24px;
+    font-weight: bold;
+    margin-left: 4px;
+}
+
+.announcements {
+    margin-top: 12px;
+    background-color: white;
+    border-radius: 12px;
+    padding: 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-grow: 1;
+}
+
+.announcement > .title {
+    font-weight: bold;
 }
