--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -379,7 +379,7 @@
     color: gray;
 }
 
-@media (width <= 1200px) {
+@media screen and (width <= 1200px) {
     .header {
         grid-column: span 2;
     }
@@ -423,5 +423,53 @@
     .sidebarMenu > .menu:hover {
         cursor: pointer;
         opacity: 0.5;
+    }
+}
+
+@media screen and (width < 850px) {
+    .content {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr auto;
+    }
+
+    .header {
+        grid-template-columns: 1fr 1fr 150px;
+    }
+    
+    /* .content {
+        grid-template-columns: 4fr minmax(300px, 1fr);
+    } */
+    
+    .projects {
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    }
+
+    .header .searchContainer {
+        grid-column: 1 / 3;
+    }
+
+    .header .buttonContainer {
+        grid-column: 2 / 4;
+    }
+
+    .header .buttonContainer button {
+        min-width: 60px;
+        margin-right: 16px;
+    }
+    .content .projectsContainer {
+        grid-row: 2 / auto;
+    }
+
+    .header .nameContainer {
+        justify-content: right;
+        padding-right: 24px;
+    }
+
+    .header .profilePicture {
+        margin-left: 24px;
+    }
+
+    .header .name {
+        display: none;
     }
 }
