--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -253,6 +253,7 @@
     margin-top: 12px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-rows: 1fr 1fr 1fr;
     gap: 32px;
 }
 
